# megasource

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  readme.md
.github/workflows/: deps-test.yml
libs/DevIL-1.7.8/: CMakeLists.txt
libs/LuaJIT/: .relver  CMakeLists.txt  android_build_readme.bat
libs/LuaJIT/android/arm64-v8a/: luajit.h
libs/LuaJIT/android/x86/: luajit.h
libs/LuaJIT/android/x86/jit/: vmdef.lua
libs/LuaJIT/android/x86_64/: luajit.h
libs/LuaJIT/android/x86_64/jit/: vmdef.lua
libs/LuaJIT/src/: msvcbuild.bat
libs/SDL2/: .hg_archival.txt  CMakeLists.txt  CMakeLists.txt.orig
libs/SDL2-2.0.0/: CMakeLists.txt
libs/SDL2-2.0.1/: CMakeLists.txt
libs/SDL2/VisualC-WinRT/: SDL-UWP.vcxproj  SDL-UWP.vcxproj.filters
libs/SDL2/docs/: README-ps2.md
libs/SDL2/include/: SDL_config.h.cmake
libs/SDL2/src/stdlib/: SDL_string.c
libs/SDL2_image-2.0.0/: CMakeLists.txt
libs/SDL3/: .git-hash
libs/freetype/: CMakeLists.txt
libs/freetype-2.5.0.1/: CMakeLists.txt
libs/freetype-2.5.0.1/builds/amiga/src/base/: ftdebug.c
libs/freetype-2.5.0.1/src/autofit/: afcjk.c  afdummy.c  afglobal.c  afhints.c  afindic.c  aflatin.c  aflatin2.c  afloader.c  afpic.c  afpic.h
libs/freetype-2.5.0.1/src/base/: ftbitmap.c  ftcalc.c  ftdebug.c  ftmac.c  ftobjs.c
libs/freetype-2.5.0.1/src/bdf/: bdfdrivr.c
libs/freetype-2.5.0.1/src/cff/: cf2blues.c  cf2font.c  cf2font.h  cf2ft.c  cf2hints.c  cf2hints.h  cffdrivr.c  cffgload.c  cffload.c  cffobjs.c  cffobjs.h
libs/freetype-2.5.0.1/src/cid/: cidgload.c  cidload.c
libs/freetype-2.5.0.1/src/gxvalid/: gxvcommn.c  gxvmort.c
libs/freetype-2.5.0.1/src/gzip/: ftgzip.c
libs/freetype-2.5.0.1/src/pcf/: pcfdrivr.c  pcfread.c
libs/freetype-2.5.0.1/src/pfr/: pfrcmap.c  pfrgload.c  pfrobjs.c
libs/freetype-2.5.0.1/src/raster/: ftraster.c
libs/freetype-2.5.0.1/src/sfnt/: pngshim.c  pngshim.h  sfdriver.c  sfobjs.c  ttmtx.c  ttsbit.c  ttsbit.h
libs/freetype-2.5.0.1/src/smooth/: ftgrays.c
libs/freetype-2.5.0.1/src/tools/docmaker/: tohtml.py
libs/freetype-2.5.0.1/src/truetype/: ttdriver.c  ttgload.c  ttinterp.c  ttobjs.c
libs/freetype-2.5.0.1/src/type1/: t1gload.c  t1load.c
libs/freetype-2.5.0.1/src/type42/: t42objs.c
libs/freetype-2.5.0.1/src/winfonts/: winfnt.c
libs/freetype-2.6.2/: CMakeLists.txt
libs/freetype-2.6.5/: CMakeLists.txt  ChangeLog  Jamfile  README  modules.cfg
libs/freetype-2.6.5/builds/mac/: ftmac.c
libs/freetype-2.6.5/builds/unix/: config.sub  configure  configure.ac  configure.raw  ftconfig.in
libs/freetype-2.6.5/devel/: ftoption.h
libs/freetype-2.6.5/docs/: CHANGES  VERSIONS.TXT  formats.txt  freetype-config.1
libs/freetype-2.6.5/docs/reference/: ft2-auto_hinter.html  ft2-base_interface.html  ft2-basic_types.html  ft2-bdf_fonts.html  ft2-bitmap_handling.html  ft2-bzip2.html  ft2-cache_subsystem.html  ft2-cff_driver.html  ft2-cid_fonts.html  ft2-computations.html  ft2-error_code_values.html  ft2-error_enumerations.html  ft2-font_formats.html  ft2-gasp_table.html  ft2-glyph_management.html  ft2-glyph_stroker.html  ft2-glyph_variants.html  ft2-gx_validation.html  ft2-gzip.html  ft2-header_file_macros.html  ft2-header_inclusion.html  ft2-incremental.html  ft2-index.html  ft2-lcd_filtering.html  ft2-list_processing.html  ft2-lzw.html  ft2-mac_specific.html  ft2-multiple_masters.html  (+17 more)
libs/freetype-2.7/: CMakeLists.txt  ChangeLog  Jamfile  README
libs/freetype-2.7/docs/: CHANGES  VERSIONS.TXT  freetype-config.1
libs/freetype-2.8/: CMakeLists.txt
libs/freetype-2.8.1/: CMakeLists.txt
libs/harfbuzz/: CMakeLists.txt
libs/harfbuzz/.ci/: requirements-fonttools.txt  requirements.txt
libs/jasper-1.900.1/: CMakeLists.txt
libs/jasper-1.900.1/src/libjasper/include/jasper/: jas_config.h
libs/jpeg-9/: CMakeLists.txt  jconfig.cmake
libs/libjpeg-turbo/: CMakeLists.txt
libs/libjpeg-turbo/sharedlib/: CMakeLists.txt
libs/libjpeg-turbo/testimages/: testorig.ppm
libs/libmodplug-0.8.8.4/: CMakeLists.txt
libs/libmodplug-0.8.8.4/src/: config.h.cmake  load_abc.cpp  load_pat.cpp
libs/libogg-1.3.1/: CMakeLists.txt
libs/libogg-1.3.2/: CMakeLists.txt
libs/libogg-1.3.2/include/ogg/: os_types.h
libs/libtheora-1.1/: CHANGES  Makefile.am  autogen.sh  configure.ac
libs/libtheora-1.1.1/: CMakeLists.txt
libs/libtheora-1.1/debian/: changelog  control  copyright  libtheora-dev.install  libtheora0.install  rules
libs/libtheora-1.1/examples/: dump_psnr.c  dump_video.c  encoder_example.c  player_example.c  png2theora.c  splayer.c
libs/libtheora-1.1/lib/: encint.h  encode.c  huffdec.c  internal.h
libs/libvorbis-1.3.3/: CMakeLists.txt
libs/libvorbis-1.3.5/: CMakeLists.txt
libs/libvorbis-1.3.5/lib/: os.h
libs/lpng166/: ANNOUNCE  CHANGES  CMakeLists.txt  LICENSE  README  configure  libpng-manual.txt  libpng.3  libpngpf.3  png.5  png.c  png.h  pngconf.h  pngrtran.c  pngrutil.c  pngtest.c
libs/lpng166/scripts/: README.txt  def.dfn  libpng-config-head.in  libpng.pc.in  makefile.cegcc  makefile.linux  makefile.msys  makefile.ne12bsd  makefile.netbsd  makefile.openbsd  pnglibconf.dfa  pnglibconf.h.prebuilt  symbols.def
libs/lua-5.1.5/: CMakeLists.txt
libs/mpg123-1.15.3/: CMakeLists.txt
libs/mpg123-1.25.6/: CMakeLists.txt
libs/mpg123-1.25.6/ports/MSVC++/: config.h
libs/mpg123-1.25.6/src/: config.h.in
libs/mpg123-1.25.6/src/compat/: compat.c
libs/openal-soft/: CMakeLists.txt  libopenal.version
libs/openal-soft-1.15.1/: CMakeLists.txt
libs/openal-soft-1.15.1-29e0af5ef052/: CMakeLists.txt
libs/openal-soft/Alc/: helpers.c
libs/openal-soft/cmake/: CheckFileOffsetBits.cmake  FindWindowsSDK.cmake
libs/openal-soft/common/: pffft.cpp
libs/openal-soft/include/: threads.h
libs/physfs-2.0.3/: CMakeLists.txt
libs/physfs-3.0.0/: .hg_archival.txt  .hgtags  CMakeLists.txt
libs/physfs-3.0.1/: .hg_archival.txt  CMakeLists.txt
libs/tiff-4.0.3/: CMakeLists.txt
libs/tiff-4.0.3/libtiff/: tif_config.h.cmake  tiffconf.h.cmake
libs/zlib-1.2.11/: CMakeLists.txt
libs/zlib-1.2.12/: CMakeLists.txt
libs/zlib-1.2.8/: CMakeLists.txt
libs/zlib-1.3.1/: CMakeLists.txt
src/: test.cpp
(+195 files in other folders)
